--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ session.addEventListener("select", (event) => {
   if (crate) {
     //const clone = crate.clone();
     //clone.position.copy(reticle.position);
-    crate.position.copy(reticle.position);
+    crate.position.set(reticle.position);
     
     //clone.scale.set(0.01,0.01,0.01);
     //scene.add(clone);
