Ad crate to scene initially.

--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@ crate = new THREE.Mesh(
 		normalMap:crateNormalMap
 	})
 );
+scene.add(crate);
 
 session.addEventListener("select", (event) => {
   if (crate) {
