--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@ session.addEventListener("select", (event) => {
     //const clone = crate.clone();
     //clone.position.copy(reticle.position);
     crate.position.copy(reticle.position);
+    crate.lookAt(camera.position);
     
     //clone.scale.set(0.01,0.01,0.01);
     //scene.add(clone);
