remove-light test

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ light.position.set(-3,6,-3);
 light.castShadow = true;
 light.shadow.camera.near = 0.1;
 light.shadow.camera.far = 25;
-scene.add(light);
+//scene.add(light);
 
 // Texture Loading
 var textureLoader = new THREE.TextureLoader();
